--- a/202307/src/generate_texts_llama_jplaw_v04.ipynb
+++ b/202307/src/generate_texts_llama_jplaw_v04.ipynb
@@ -13,6 +13,7 @@
     "import pathlib\n",
     "import sys\n",
     "import pydoc\n",
+    "import time\n",
     "\n",
     "import datasets\n",
     "import fire\n",
@@ -122,6 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "start_time = time.time()\n",
+    "\n",
     "for j in range(1, 4):\n",
     "    # logger.info(f\"processing R{j} data.\")\n",
     "    print(f\"processing R{j} data.\")\n",
@@ -141,7 +144,18 @@
     "                generated = generate_text(prompt)\n",
     "                json.dump(dict(year=year, subject=subject, Q_no=Q_no, prompt=prompt, complete=generated), o_, ensure_ascii=False)\n",
     "                o_.write(\"\\n\")\n",
-    "                o_.flush()"
+    "                o_.flush()\n",
+    "                \n",
+    "duration = time.time() - start_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"duration: {duration}\")"
    ]
   }
  ],
