--- a/202307/src/Untitled.ipynb
+++ b/202307/src/Untitled.ipynb
@@ -1166,7 +1166,138 @@
    "id": "c871592f-75f4-4b93-86da-8b7f0ac78c8e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 再び　G.large\n",
+    "# モデルを変えて実験"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "import json\n",
+    "model_name = '/groups/4/gcb50389/pretrained/llama2-HF/Llama-2-7b-hf'\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name, device_map='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text_fn(model, tokenizer, args: dict = {}):\n",
+    "    def generate_text(prompt: str) -> str:\n",
+    "        input_tokens = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "        input_length = input_tokens.input_ids.shape[1]\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            outputs = model.generate(\n",
+    "                input_ids=input_tokens[\"input_ids\"],\n",
+    "                attention_mask=input_tokens[\"attention_mask\"],\n",
+    "                return_dict_in_generate=True,\n",
+    "                eos_token_id=tokenizer.eos_token_id,\n",
+    "                pad_token_id=tokenizer.pad_token_id,\n",
+    "                **args,\n",
+    "            )\n",
+    "            output_tokens = outputs.sequences[0, input_length:-1]\n",
+    "\n",
+    "        return tokenizer.decode(output_tokens)\n",
+    "\n",
+    "    return generate_text\n",
+    "\n",
+    "generate_text = generate_text_fn(model, tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import time\n",
+    "\n",
+    "prompt = \"日本一高い山は\"\n",
+    "start_time = time.time()\n",
+    "generated = generate_text(prompt)\n",
+    "duration = time.time() - start_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(generated)\n",
+    "print(duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompts = [\n",
+    "    \"日本一高い山は\",\n",
+    "    \"世界一高い山は\",\n",
+    "    \"米国の大統領は\",\n",
+    "    \"福沢諭吉とは\",\n",
+    "    \"日本の教育の問題点は\",\n",
+    "    \"蒸留とは\",\n",
+    "    \"留数定理とは\",\n",
+    "    \"3の3乗は\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generated = []\n",
+    "start_time = time.time()\n",
+    "for prompt in prompts:\n",
+    "    generated.append(generate_text(prompt))\n",
+    "duration = time.time() - start_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for g in generated:\n",
+    "    print(g)\n",
+    "    print(\"-------------\")\n",
+    "print(duration)"
+   ]
   }
  ],
  "metadata": {
