--- a/202307/src/generate_texts_llama_jplaw_v04.ipynb
+++ b/202307/src/generate_texts_llama_jplaw_v04.ipynb
@@ -751,7 +751,94 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# G.large=1で実験\n",
+    "# Data Parallelism実装"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "import json\n",
+    "import logging\n",
+    "import os\n",
+    "import pathlib\n",
+    "import sys\n",
+    "import pydoc\n",
+    "import time\n",
+    "\n",
+    "import datasets\n",
+    "import fire\n",
+    "import torch\n",
+    "import yaml\n",
+    "\n",
+    "from accelerate import PartialState\n",
+    "from diffusers import DiffusionPipeline\n",
+    "import transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_dataset(test_file: str):\n",
+    "    return datasets.load_dataset(\"json\", data_files=test_file, split=\"train\")\n",
+    "\n",
+    "def generate_text_fn(model, tokenizer, args: dict = {}):\n",
+    "    def generate_text(prompt: str) -> str:\n",
+    "        input_tokens = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "        input_length = input_tokens.input_ids.shape[1]\n",
+    "\n",
+    "        with torch.no_grad():\n",
+    "            outputs = model.generate(\n",
+    "                input_ids=input_tokens[\"input_ids\"],\n",
+    "                attention_mask=input_tokens[\"attention_mask\"],\n",
+    "                return_dict_in_generate=True,\n",
+    "                eos_token_id=tokenizer.eos_token_id,\n",
+    "                pad_token_id=tokenizer.pad_token_id,\n",
+    "                **args,\n",
+    "            )\n",
+    "            output_tokens = outputs.sequences[0, input_length:-1]\n",
+    "\n",
+    "        return tokenizer.decode(output_tokens)\n",
+    "\n",
+    "    return generate_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 設定ファイルの読み込み\n",
+    "config_file = \"../config/config_generate_texts_llama_jplaw_v04.yaml\"\n",
+    "with open(config_file, \"r\") as i_:\n",
+    "    config = yaml.safe_load(i_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = DiffusionPipeline.from_pretrained(\n",
+    "    \"runwayml/stable-diffusion-v1-5\", torch_dtype=torch.float16, use_safetensors=True\n",
+    ")\n",
+    "distributed_state = PartialState()\n",
+    "pipeline.to(distributed_state.device)\n",
+    "\n",
+    "with distributed_state.split_between_processes([\"a dog\", \"a cat\"]) as prompt:\n",
+    "    result = pipeline(prompt).images[0]\n",
+    "    result.save(f\"result_{distributed_state.process_index}.png\")"
+   ]
   }
  ],
  "metadata": {
@@ -770,7 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
