--- a/202307/src/output_clean.ipynb
+++ b/202307/src/output_clean.ipynb
@@ -1955,6 +1955,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "correct\n",
+      "False    30\n",
+      "True      7\n",
+      "Name: count, dtype: int64\n",
+      "2\n",
+      "correct\n",
+      "False    30\n",
+      "True      7\n",
+      "Name: count, dtype: int64\n",
+      "3\n",
+      "correct\n",
+      "False    30\n",
+      "True      7\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "for j in range(1, 4):\n",
+    "    df = pd.read_json(f'../outputs/generated_text_07_{j}.jsonl', lines=True, orient='records')\n",
+    "    df_ = pd.read_json(f'../data/R{j}_short_answer_exam.json')\n",
+    "    df[\"complete\"] = df[\"complete\"].apply(lambda x: x[0])\n",
+    "    df[\"answer\"] = \"\"\n",
+    "    for i in range(df.shape[0]):\n",
+    "        ans = df_[(df_[\"subject\"] == df.loc[i, \"subject\"]) & (df_[\"Q_no\"] == df.loc[i, \"Q_no\"])][\"answer\"].values[0]\n",
+    "        df.loc[i, \"answer\"] = ans\n",
+    "    df[\"correct\"] = df[\"answer\"] == df[\"complete\"] \n",
+    "    df.to_csv(f'../outputs/generated_text_07_{j}.csv', index=False, encoding='utf-8-sig')\n",
+    "    print(j)\n",
+    "    print(df[\"correct\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1977,7 +2020,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
